# video-gen

./: .gitignore  SETUP_WSL.md  pyproject.toml
src/video_gen/: __init__.py  cli.py  config.py  pipeline.py
src/video_gen/compose/: __init__.py  compositor.py
src/video_gen/models/: __init__.py  script.py
src/video_gen/script/: __init__.py  base.py  claude.py  ollama.py  prompts.py
src/video_gen/tts/: __init__.py  base.py  f5tts.py
src/video_gen/video/: __init__.py  base.py  wan.py
